--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Clare Kinery</h1>
         <h2>CSE Student at MSU</h2>
         <ul class="contacts">
-            <li><a href="" ><img src="images/instagram.png" alt="Instagram"></a></li>
-            <li><a href="" ><img src="images/github.png" alt="Github"></a></li>
-            <li><a href="" ><img src="images/email.png" alt="Email"></a></li>
+            <li><a href="https://www.instagram.com/clare_kinery/" ><img src="images/instagram.png" alt="Instagram"></a></li>
+            <li><a href="https://github.com/kinerycl" ><img src="images/github.png" alt="Github"></a></li>
+            <li><a href="mailto:kinerycl@msu.edu" ><img src="images/email.png" alt="Email"></a></li>
         </ul>
     </div>
     
